[package]
name = "helpman"
version = "1.0.0"
edition = "2021"
authors = ["Tomoki Ota <tomo.soccer1227@gmail.com>"]
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["helpman"] 
repository = "https://github.com/tomo1227/helpman"
homepage = "https://tomomon.jp"
description = "Document Cli Application"

[badges]
github = { repository = "tomo1227/helpman", workflow = "Rust" }

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
cross = "0.2.4"
dotenv = "0.15.0"
home = "0.5.4"
question = "0.2.2"
termimad = "0.20.6"
